--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "prefix": "/",
-  "adminUID": ["100066742490781", "100057648637336"],
+  "prefix": "!",
+  "adminUID": ["61576677958957", "100047812179902"],
   "version": "2.4.2",
-  "credit": "Joshua Apostol & Cyril Encenso",
-  "github": ["https://github.com/joshuaApos, https://github.com/atsushinakajima14"]
+  "credit": "Vern",
+  "github": ["https://github.com/vraxyxx, https://github.com/vernesg"]
 }
