--- a/config.json
+++ b/config.json
@@ -3,5 +3,5 @@
   "adminUID": ["61576677958957", "100047812179902"],
   "version": "2.4.2",
   "credit": "Vern",
-  "github": ["https://github.com/vraxyxx, https://github.com/vernesg"]
+  "github": ["https://github.com/vraxyxx", "https://github.com/vernesg"]
 }
