--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "prefix": "!",
-  "adminUID": ["61576677958957", "100047812179902"],
+  "prefix": "+",
+  "adminUID": ["100047812179902", "100057648637336"]
   "version": "2.4.2",
-  "credit": "Vern",
-  "github": ["https://github.com/vraxyxx", "https://github.com/vernesg"]
+  "credit": "revn mukhang burat",
+  "github": ["https://github.com/vraxyxx, https://github.com/vernesg"]
 }
