--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "prefix": "+",
-  "adminUID": ["100047812179902", "61576677958957"]
+  "adminUID": ["100047812179902", "61576677958957"],
   "version": "2.4.2",
   "credit": "revn mukhang burat",
   "github": ["https://github.com/vraxyxx, https://github.com/vernesg"]
