--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "prefix": "+",
+  "prefix": "!",
   "adminUID": ["100035996145075", "61576677958957"],
   "version": "2.4.2",
   "credit": "revn mukhang burat",
